--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es6"
-  }
+    "target": "es6",
+    "outDir": "dist"
+  },
+  "exclude": [
+    "test"
+  ]
 }
